# Nexus-Agent

./: .gitignore  CHANGELOG.md  README.md  install.ps1  install.sh  main.py  nexus  pyproject.toml  requirements.txt
core/: __init__.py  actions.py  assistant_actions.py  config.py  execution.py  language.py  llm.py  logging_utils.py  mcp.py  memory.py  notebooks.py  parallel.py  privilege.py  remote.py  safeguards.py  state.py  system_context.py  tool_registry.py  transcript.py  update_check.py  version.py  web_lookup.py
legacy/: README.md  pc_remote_unified.py
pc_remote_agent/: __init__.py  agent.py  bridge.py  browser.py  cli.py  compat.py  controller.py  errors.py  indicator.py  policy.py  profiles.py  resilience.py  runtime.py  state.py  vision.py
pc_remote_agent/services/: __init__.py  browser.py  chat.py  keyboard.py  mouse.py  screen.py  windows.py
tests/: test_entrypoints.py  test_install_script.py  test_llm_retry.py  test_local_runtime_config.py  test_nexus_ui.py  test_parallel.py  test_security_runtime.py  test_setup_ui.py  test_startup_flow.py  test_transcript.py  test_update_check.py  test_version.py
ui/: __init__.py  app.py  interaction.py  plain_cli.py  setup_cli.py
