[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-remote-agent"
version = "2.1.0"
description = "Cross-platform desktop bridge CLI for AI agents with safety indicator and resilient vision"
requires-python = ">=3.10"
dependencies = [
  "mss",
  "pyautogui",
  "Pillow",
  "pytesseract",
]
